09-ingress/eks/cookieaffinity-and-upsreamhash-giropops/cookieaffinity-giropops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  #  nginx.ingress.kubernetes.io/auth-type: "basic"
  #  nginx.ingress.kubernetes.io/auth-secret: "giropops-senhas-users"
  #  nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - giropops.mxjrlab.com.br"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - giropops.mxjrlab.com.br
      secretName: giropops.mxjrlab.com.br-tls
  rules:
    - host: giropops.mxjrlab.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: giropops-senhas
                port:
                  number: 5000
